[project]
name = "Minecraft Dungeons Launcher"
version = "1.3"
description = "Unoffical Launcher with offline Support by Doc"
readme = "README.md"
authors = [
    { name = "TheDoctor" }
]
dependencies = [
  "flet"
  "requests"
]

[tool.flet]
org = "thedoctor.ct.ws"
product = "Launcher Software"
company = "TDP"
copyright = "Copyright (C) 2025 by Doc"

[tool.flet.app]
path = "src"